--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "fs": "0.0.1-security",
     "js-yaml": "^4.1.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.1"
+    "vue-cli-plugin-yaml": "^1.0.2",
+    "vue-cookies": "^1.7.4",
+    "vue-router": "^3.5.1",
+    "vue-scrollto": "^2.19.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
